# ScrubCut

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: EmbedShaders.cmake  GenerateVersion.cmake
docs/: text-search.md
platform/macos/: Info.plist  Info.plist.in  ScrubCut.icns
platform/windows/: ScrubCut.rc  ScrubCut.rc.in  register_file_types.reg  utf8.manifest
scripts/: make_fixture.py
src/: App.cpp  App.h  main.cpp
src/core/: AudioDecoder.cpp  AudioDecoder.h  AudioOutput.cpp  AudioOutput.h  Clock.cpp  Clock.h  Demuxer.cpp  Demuxer.h  FrameCache.h  FrameConverter.cpp  FrameConverter.h  FrameQueue.h  OcrCache.cpp  OcrCache.h  OcrIndexer.cpp  OcrIndexer.h  PacketQueue.h  Player.cpp  Player.h  SegmentManager.h  SubtitleExtractor.cpp  SubtitleExtractor.h  VideoDecoder.cpp  VideoDecoder.h  WaveformExtractor.cpp  WaveformExtractor.h
src/export/: Exporter.cpp  Exporter.h
src/ui/: UIManager.cpp  UIManager.h  VideoTonemap.cpp  VideoTonemap.h
src/ui/shaders/: composite.frag.hlsl  tonemap.frag.glsl  tonemap.frag.hlsl  tonemap.vert.glsl  tonemap.vert.hlsl
src/util/: AppPaths.h  CommandLine.h  FFmpegUtils.h  Levenshtein.h  Log.h  Settings.h  Trace.h  Types.h  UnicodeNormalize.h
